--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-firebaseui": "^3.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-select": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
